# remote-ipython

./: pyproject.toml
remote_ipython/: __init__.py  __main__.py  client.py  server.py  server2.py
test/: subthread.py
