[tool.poetry]
name = "remote-ipython"
version = "1.0.0b7"
description = ""
authors = ["Likianta <likianta@foxmail.com>"]
# readme = "README.md"
packages = [{ include = "remote_ipython" }]

[tool.poetry.dependencies]
python = "^3.8"
argsense = "^0.7.1"
ipykernel = "^6.29.5"
ipython = ">=8.12.0"
jupyter-console = "^6.6.3"
lk-logger = "^6.0.5"
# lk-utils = "^3.1.3"
prompt-toolkit = "^3.0.50"

[tool.poetry.group.dev.dependencies]
ipython = { version = "^9.0.0", python = "^3.12" }

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta-host"
url = "http://47.102.108.149:2131/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
